--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,3 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="animated fadeIn" id="root">
+  <script src="index.js"></script>
+</div>
